objects/Demonstration_Presenter__c.object
<CustomObject>
    <description>What it does?  Object holding information about demonstration presenters for demo requests.  Downstream Impact?  None.  Which Department is Owner?  Sales Ops.

Part of the DEMO REQUEST process.</description>
    <fields>
        <fullName>Display_Name__c</fullName>
        <description>What it does?  Display name of the demonstration presenter.  Downstream Impact?  None.  Which Department is Owner?  Sales Ops.</description>
        <formula>User_Name__r.FirstName + &apos; &apos; +  User_Name__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GTM_Access_Token__c</fullName>
        <description>What it does?  Holds the GTM access token for the demonstration presenter.  Downstream Impact?  None.  Which Department is Owner?  Sales Ops.</description>
        <label>GTM Access Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GTM_Account_Key__c</fullName>
        <description>What it does?  Holds the GTM account key for the demostration presenter.  Downstream Impact?  None.  Which Department is Owner?  Sales Ops.</description>
        <label>GTM Account Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GTM_Conference_Preference__c</fullName>
        <description>What it does?  Holds conference preference for the demonstration presenter.  Downstream Impact?  None.  Which Department is Owner?  Sales Ops.</description>
        <inlineHelpText>PSTN - Provides GTM conference number only.  No VoIP
Hybrid - Provides both GTM Conference number and VoIP option</inlineHelpText>
        <label>GTM Conference Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PSTN</fullName>
                    <default>true</default>
                    <label>PSTN</label>
                </value>
                <value>
                    <fullName>Hybrid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GTM_Organizer_Key__c</fullName>
        <description>What it does?  Holds the GTM organizer key for the demonstration presenter.  Downstream Impact?  None.  Which Department is Owner?  Sales Ops.</description>
        <label>GTM Organizer Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GTM_Token_Expire_Date__c</fullName>
        <description>What it does?  Holds the GTM token expiration date.   Downstream Impact?  None.  Which Department is Owner?  Sales Ops.</description>
        <label>GTM Token Expire Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ININ_Record_ID__c</fullName>
        <description>Holds the original record&apos;s ID if this record was imported from the ININ org.</description>
        <label>ININ Record ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Presenter_E_mail__c</fullName>
        <description>What it does?  Holds the email address of the demonstration presenter.   Downstream Impact?  None.  Which Department is Owner?  Sales Ops.</description>
        <formula>User_Name__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>E-mail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Presenter_Signature__c</fullName>
        <description>What it Does?  Stores the signature of each presenter that will hold information that will be sent to Requesters when demos are accepted.  Downstream Impact?  None.  Which Department is Owner?  Sales Ops.

Part of the DEMO REQUEST process.</description>
        <label>Presenter Signature</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>QueueName__c</fullName>
        <description>What it does?  Holds name of queue associated with the presenter.   Downstream Impact?  None.  Which Department is Owner?  Sales Ops.</description>
        <label>QueueName</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Technical Sales</fullName>
                    <default>true</default>
                    <label>Technical Sales</label>
                </value>
                <value>
                    <fullName>Velocity Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What it Does? Holds the name of the presenter. Downstream Impact? None. Which Department is Owner? Sales Ops.</description>
        <label>User Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Demonstration_Presenters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isTSC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What it Does?  Allows this presenter to decline demos.  Downstream Impact? None. Which Department is Owner? Sales Ops.</description>
        <label>isTSC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isTSM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What it Does?  Allows Manager activities.  Downstream Impact? None. Which Department is Owner? Sales Ops.</description>
        <label>isTSM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isTS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What it Does?  Allows this presenter to become a demo owner (Accept or be assigned a demo).  Downstream Impact? None. Which Department is Owner? Sales Ops.</description>
        <label>isTS</label>
        <type>Checkbox</type>
    </fields>
    <label>Demonstration Presenter</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>User_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_with_Queue</fullName>
        <columns>NAME</columns>
        <columns>Display_Name__c</columns>
        <columns>isTS__c</columns>
        <columns>isTSC__c</columns>
        <columns>isTSM__c</columns>
        <columns>QueueName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All with Queue</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>DP-{0000}</displayFormat>
        <label>Demonstration Presenter Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Demonstration Presenters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>